--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <div class="container">
           <div class="heading">
             <h1>
-              Smartphone saat ini yang <span> pilihan kami yang terbaik</span>
+              Smartphone saat ini <span> pilihan kami yang terbaik</span>
             </h1>
-            <p>Cepat beli sembelum kehabisan !!!</p>
+            <p>Cepat beli sebelum kehabisan !!!</p>
           </div>
           <div class="lessons">
             <div class="lesson">
